--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.royalcourtbd" "\0"
             VALUE "FileDescription", "jobs_bd" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "jobs_bd" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.royalcourtbd. All rights reserved." "\0"
             VALUE "OriginalFilename", "jobs_bd.exe" "\0"
             VALUE "ProductName", "jobs_bd" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
