--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   responsive_sizer: ^3.3.1
   path_provider: ^2.1.3
   intl: ^0.19.0
+  firebase_core: ^2.31.1
+  firebase_messaging: ^14.9.3
+  firebase_storage: ^11.7.6
+  firebase_analytics: ^10.10.6
+  firebase_crashlytics: ^3.5.6
+  cloud_firestore: ^4.17.4
   flutter_html_all: ^3.0.0-beta.2
 
 dev_dependencies:
