--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_crashlytics: ^3.5.6
   cloud_firestore: ^4.17.4
   flutter_html_all: ^3.0.0-beta.2
+  equatable: ^2.0.5
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
