--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_html_all: ^3.0.0-beta.2
   equatable: ^2.0.5
   fpdart: ^1.1.0
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
