--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   flutter_html_all: ^3.0.0-beta.2
   equatable: ^2.0.5
   fpdart: ^1.1.0
-  connectivity_plus: ^6.0.3
+  internet_connection_checker_plus: 2.3.0
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
