--- a/native_splash.yaml
+++ b/native_splash.yaml
@@ -22,7 +22,7 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: assets/images/png/app_logo(1).png
+  image: assets/images/png/app_logo.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
@@ -58,7 +58,7 @@ flutter_native_splash:
 
     # Splash screen background color.
     color: "#BD9979"
-    image: assets/images/png/app_logo(1).png
+    image: assets/images/png/app_logo.png
 
     # App icon background color.
     #icon_background_color: "#111111"
@@ -135,7 +135,7 @@ flutter_native_splash:
   #       To show the notification bar, add the following code to your Flutter app:
   #       WidgetsFlutterBinding.ensureInitialized();
   #       SystemChrome.setEnabledSystemUIMode(SystemUiMode.manual, overlays: [SystemUiOverlay.bottom, SystemUiOverlay.top], );
-  #fullscreen: true
+  fullscreen: true
 
   # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
   # with the info_plist_files parameter.  Remove only the # characters in the three lines below,
