--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   fpdart: ^1.1.0
   internet_connection_checker_plus: 2.3.0
   flutter_native_splash: ^2.4.0
+  google_mobile_ads: ^5.1.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
