--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   responsive_sizer: ^3.3.1
   path_provider: ^2.1.3
   intl: ^0.19.0
-  firebase_core: ^2.31.1
-  firebase_messaging: ^14.9.3
-  firebase_storage: ^11.7.6
-  firebase_analytics: ^10.10.6
-  firebase_crashlytics: ^3.5.6
-  cloud_firestore: ^4.17.4
+  firebase_core: ^3.0.0
+  firebase_messaging: ^15.0.0
+  firebase_storage: ^12.0.0
+  firebase_analytics: ^11.0.0
+  firebase_crashlytics: ^4.0.0
+  cloud_firestore: ^5.0.0
   flutter_html_all: ^3.0.0-beta.2
   equatable: ^2.0.5
   fpdart: ^1.1.0
@@ -52,6 +52,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   google_mobile_ads: ^5.1.0
   cached_network_image: ^3.3.1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
