--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,8 +71,7 @@ flutter {
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:31.2.0') // Check for the latest version
-    implementation 'com.google.firebase:firebase-messaging' // Add the Firebase Messaging dependency
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    
 
 }
-
-apply plugin: 'com.google.gms.google-services'
