--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.0' // or the version you're using
-        classpath 'com.google.gms:google-services:4.3.10' // Check for the latest version
+        classpath 'com.google.gms:google-services:4.4.0' // Check for the latest version
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.1'
     }
 }
 
