--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_mobile_ads: ^5.1.0
   cached_network_image: ^3.3.1
   device_info_plus: ^10.1.0
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
