🚀 Enhance app UI and performance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   facebook_audience_network: ^1.0.1
   fluttertoast: ^8.2.4
   flutter_html: ^3.0.0-beta.2
+  googleapis_auth: ^1.6.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
