🚀 Enhance app security and UI
🔒 Secure credentials handling with dotenv
🎨 Improve job list item layout
🐛 Fix JSON parsing error in Firebase credentials
🧹 Code cleanup and refactoring
📦 Add flutter_dotenv dependency

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ migrate_working_dir/
 
 # Environment variables file
 .env
-diff_output.txt
+/diff_output.txt
+
 
 # Flutter/Dart/Pub related
 **/doc/api/
