--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
