Add Firebase Notification Support and Device Token Handling 📲🔔
- Added POST_NOTIFICATIONS permission to AndroidManifest.xml 🛠️
- Updated device_info_model to include deviceToken 🆔
- Modified device_info_repository to handle device token updates 🔄
- Integrated local notifications with FlutterLocalNotificationsPlugin 📩
- Initialized notification service in main.dart 🚀
- Cleaned up unused code from home_presenter and home_page 🚮
- Removed old app_logo.png and replaced with notification_icon 🖼️

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     
     <application
         android:label="Jobs BD"
@@ -42,9 +44,12 @@
         <!-- Add the metadata for the default icon -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/app_logo" 
-            
+            android:resource="@drawable/notification_icon" 
             />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/notification_icon_color" />
+            
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-9046297647605396~3546791246"/>
