--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
   app_settings: ^5.1.1
+  drift: ^2.19.1+1
+  drift_flutter: ^0.1.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +75,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  drift_dev: ^2.19.1
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
